# eeg_positions

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  CITATION.cff  LICENSE  MANIFEST.in  Makefile  README.md  api.html  authors.html  changes.html  genindex.html  index.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html
.circleci/: config.yml
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: circleci_artifact_redirector.yml  python-build.yml  python-test.yml  python_build-test-deploy.yml  python_build-test.yml  python_publish.yml  release.yml
_downloads/348a3e7b1c9619460c9bcaeffbfc1563/: use_elec_names.ipynb
_downloads/42b408f6a930abf95fe80fc4e3aee92e/: use_mne.ipynb
_downloads/aac7a088590dc1de55c02a57d6db4d6d/: plot_positions.ipynb
_modules/: index.html
_modules/eeg_positions/: compute.html  utils.html  viz.html
_sources/: sg_execution_times.rst.txt
_sources/auto_examples/: sg_execution_times.rst.txt
_static/: alabaster.css
auto_examples/: index.html  plot_positions.html  sg_execution_times.html  use_elec_names.html  use_mne.html
data/: README.md  standard_1005.tsv  standard_1005_2D.tsv  standard_1010_2D.tsv  standard_1010_3D.tsv  standard_1020_2D.tsv  standard_1020_3D.tsv
data/Fpz-T8-Oz-T7/: standard_1005_2D.tsv  standard_1005_3D.tsv  standard_1010_2D.tsv  standard_1010_3D.tsv  standard_1020_2D.tsv  standard_1020_3D.tsv
data/Nz-T10-Iz-T9/: standard_1005_2D.tsv  standard_1005_3D.tsv  standard_1010_2D.tsv  standard_1010_3D.tsv  standard_1020_2D.tsv  standard_1020_3D.tsv
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  index.rst  references.bib
eeg_positions/: __init__.py  calc_positions.py  compute.py  config.py  contour_labels.py  eeg_positions.py  utilities.py  utils.py  viz.py
eeg_positions/data/: standard_1005.tsv  standard_1010.tsv  standard_1020.tsv  standard_1020_2D.tsv
eeg_positions/tests/: test_compute.py  test_config.py  test_contour_labels.py  test_mne_integration.py  test_utilities.py  test_utils.py  test_viz.py
examples/: README.rst  mne_example.py  plot_on_surface.py  plot_positions.py  use_elec_names.py  use_mne.py
tests/: test_compute.py  test_utilities.py  test_utils.py  test_viz.py
