[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "eeg_positions"
description = "Compute and plot standard EEG electrode positions."
dynamic = ["version"]
authors = [
  {name = "eeg_positions developers"}
]
maintainers = [
  {name = "Stefan Appelhoff", email = "stefan.appelhoff@mailbox.org"}
]
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
keywords = [
  "EEG",
  "neuroscience",
  "electrophysiology",
  "electrode",
  "sensor",
  "coordinate",
  "position",
  "location",
  "xyz",
  "10-20 system",
  "10-10 system",
  "10-05 system"
]
classifiers = [
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
dependencies = [
  "numpy",
  "matplotlib",
  "pandas"
]

[project.optional-dependencies]
test = [
  "build",
  "mne",
  "pre-commit",
  "pytest-cov",
  "pytest-sugar",
  "pytest",
  "ruff",
  "twine"
]
docs = [
  "sphinx<9",
  "mne",
  "numpydoc",
  "sphinx-copybutton",
  "sphinx-gallery",
  "sphinxcontrib-bibtex",
  "sphinx_github_role",
  "eeg_positions[surface3d]"
]
# only needed for examples/plot_on_surface.py
surface3d = [
  "pyvistaqt",
  "ipyevents",
  "ipywidgets",
  "trame",
  "trame-vtk",
  "trame-vuetify",
  "nibabel",
  "PyQt6",
  "scikit-learn",
  "darkdetect"
]
dev = [
  "eeg_positions[test,docs]",
  "ipython",
  "ipykernel"
]

[project.urls]
"Bug Reports" = "https://github.com/sappelhoff/eeg_positions/issues"
"Source" = "https://github.com/sappelhoff/eeg_positions"
"Homepage" = "https://eeg-positions.readthedocs.io"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = ["pragma: no cover", "if 0:", "if __name__ == .__main__.:"]

[tool.coverage.run]
omit = ["*tests*"]

[tool.hatch.build]
exclude = [
  "/.*",
  "/.*/**",
  "tests/**",
  "/examples/**",
  "/docs/**",
  "/data/**"
]

[tool.hatch.metadata]
allow-direct-references = true # allow specifying URLs in our dependencies

[tool.hatch.version]
source = "vcs"
raw-options = {version_scheme = "release-branch-semver"}

[tool.pytest.ini_options]
addopts = """. --cov=eeg_positions/ --cov-report=xml --cov-config=pyproject.toml --verbose -s"""
filterwarnings = [
]

[tool.ruff]
extend-exclude = [
]

[tool.ruff.lint]
select = ["A", "D", "E", "F", "I", "UP", "W"]
ignore = ["A002"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
